workloads/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squirrel-stream
  namespace: media
  annotations: {}
  labels:
    app: squirrel-stream
spec:
  selector:
    app: squirrel-stream
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
